--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -310,7 +310,7 @@ div.spacer,
   margin          : 0px;
   padding         : 3px 0px 5px 0px;
   clear           : none;
-  overflow        : auto; 
+  /* overflow        : auto; This causes horiz scrollbars, not sure if needed. dgg*/
   height          : 100%;
 }
 
