--- a/packages/jquery/css/dashboard.css
+++ b/packages/jquery/css/dashboard.css
@@ -39,10 +39,6 @@
 /* Spacing inside widgets. */
 #crm-container .widget-wrapper { 
     padding: 0px;
-    -moz-border-radius : 4px;	
-    -webkit-border-radius : 4px;	
-    -khtml-border-radius : 4px;
-    border: 4px solid #DFDFDF;
     overflow-x:auto;
     margin-right: .25em    
 }
@@ -50,11 +46,8 @@
 /* wodget header / title */
 #crm-container .widget-header {
     color: black;
-    height: 30px;
-    line-height: 30px;
     cursor: move;
-    background: #DFDFDF;
-    width: 100%;
+    background: #CDE8FE;
     font-size: 1.2em;
     margin: 0px;
 }
@@ -82,8 +75,7 @@
 #full-screen-header {
     display: block;
     padding: .2em .4em;
-    border: 1px solid black;
-    background: #eee;
+    background: #F0F0E8;
     /* Although this is an <a> link, it doesn't have an href="" attribute. */
     cursor: pointer;
 }
@@ -101,23 +93,25 @@
 }
 
 #crm-container .minimize-icon {
-    background-position:-62px -191px;
+    background-position:-63px -17px;
     background-image:url('../themes/smoothness/images/ui-icons_454545_256x240.png');
     height:16px;
     width:16px;
     padding-right:2px;
+    float: left;
 }
 
 #crm-container .maximize-icon {
-    background-position:-46px -191px;
+    background-position:-31px -18px;
     background-image:url('../themes/smoothness/images/ui-icons_454545_256x240.png');
     height:16px;
     width:16px;
     padding-right:2px;
+    float: left;
 }
 
 #crm-container .close-icon {
-    background-position:-32px -191px;
+    background-position:-81px -129px;
     background-image:url('../themes/smoothness/images/ui-icons_454545_256x240.png');
     height:16px;
     width:16px;
@@ -125,7 +119,7 @@
 }
 
 #crm-container .fullscreen-icon {
-    background-position:-176px -191px;
+    background-position:-159px -113px;
     background-image:url('../themes/smoothness/images/ui-icons_454545_256x240.png');
     height:16px;
     width:16px;
