--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2564,9 +2564,9 @@ div#civicrm-dashboard form {
 #crm-container a:link {
     color:#2786c2;
 }
-#crm-container .crm-content-block { background-color: #FFF;border:1px solid green; }
+#crm-container .crm-content-block { background-color: #FFF;/*border:1px solid green;*/ }
 
-#crm-container .crm-form-block {border:1px solid blue;}
+/*#crm-container .crm-form-block {border:1px solid blue;}*/
 
 #crm-container .crm-title { margin-bottom: 8px; }
 
