--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1801,7 +1801,6 @@ div.grippie {
 #crm-container div#contactTopBar {
     padding          : 4px;
     LINE-HEIGHT      : 1.4em;
-    MARGIN           : 8px 0pt 0px;
     clear:both;
 }
 
@@ -1827,6 +1826,11 @@ div.grippie {
     DISPLAY : block; 
     FLOAT   : right;
 }
+
+#crm-container div#contactTopBar table,
+#crm-container div.contact_panel table {
+	margin-bottom: 4px;
+	}
 
 #crm-container div#contactTopBar .label, 
 #crm-container div.contactCardLeft .label, 
@@ -1888,7 +1892,6 @@ div.grippie {
 #crm-container #customFields .contact_panel .customFieldGroup {
     background-color : #F7F7F7;
     line-height      : 1.4em;
-    margin           : 8px 0 0;
     padding          : 4px;
     width            : 100%;
 }
@@ -2173,6 +2176,8 @@ span.icon {
 .button:hover .icon,
 .crm-button:hover .icon {background-image:url("../i/icons/jquery-ui-2786C2.png");}
 
+.crm-button .icon {margin-top:3px;}
+
 .button:hover {
     color:#333;
 }
@@ -2304,11 +2309,20 @@ span.icon {
     background-image:url("../i/icons/jquery-ui-3E3E3E.png")
 }
 
+.crm-accordion-email-signature .crm-accordion-header .crm-accordion-pointer {
+	background-image:url("../i/icons/jquery-ui-2786C2.png")
+	}
+
 .crm-accordion-hasContent .crm-accordion-header {
     font-weight:bold;
 }
 
-
+.crm-accordion-email-signature .crm-accordion-header {
+	background-color: transparent;
+	color: #2786C2;
+	font-weight: normal;
+	padding-left: 0px;	
+	}
 
 
 /* civicrm admin menu */
@@ -2462,7 +2476,7 @@ div#crm-toolTip #hide-tooltip {
 }
 
 .crm-tooltip {
-    padding:14px;
+    padding:4px;
     background-color: #2f2f2e;
     color:#FFF;
 }
@@ -2470,6 +2484,7 @@ div#crm-toolTip #hide-tooltip {
 #crm-container .crm-tooltip table tr td {border:none;}
 .crm-tooltip .crm-summary-group {
     width:700px;
+    margin-bottom: 0px;
 }
 
 #crm-container .crm-summary-group .section .label {
@@ -2581,8 +2596,7 @@ div#civicrm-dashboard form {
 #crm-container a:link {
     color:#2786c2;
 }
-#crm-container .crm-content-block { background-color: #FFF;border:1px solid green; }
-
+#crm-container .crm-content-block { background-color: #FFF; }
 
 #crm-container .crm-title { margin-bottom: 8px; }
 
@@ -2689,14 +2703,15 @@ tbody.scrollContent tr.alternateRow {
     color: #3e3e3e;
 }
 
-#crm-container div.contact_panel td.grouplabel {
-    background-color:#FFFFFF;
-    border-bottom:2px solid #D7D7D0 !important;
-    color:#2F2F2F;
-    font-size:15px;
+#crm-container div.contact_panel td.grouplabel,
+#contact-summary .crm-accordion-header {
+    background-color: #FFF;
+    color:#3e3e3e;
+    font-size:13px;
     font-weight:bold;
     font-family: Helvetica;
 }
+#crm-container div.contact_panel td.grouplabel {border-bottom:2px solid #D7D7D0 !important;}
 
 #tagGroup table .label {color:#FFF;}
 #tagGroup table {color:#000;}
@@ -2725,6 +2740,15 @@ tbody.scrollContent tr.alternateRow {
 .crm-accordion-header-hover {
 	background-color:#484E4C;
 	}
+
+#contact-summary .crm-accordion-header {
+	background-color:transparent;
+	color: #3e3e3e;
+	}
+
+#contact-summary .crm-accordion-wrapper .crm-accordion-header .crm-accordion-pointer {
+	background-image:url(../i/icons/jquery-ui-3e3e3e.png);
+	}		
 
 /* buttons */
 
